(feat): add marketplace endpoints
