# src/controllers/MarketplaceController.ts
@@ -1,0 +1,265 @@
+import {Body, Controller, Post, Response, Route, SuccessResponse, Tags} from "tsoa";
+import {ApiResponse, } from "../types/api.js";
+import {HypercertClient, } from "@hypercerts-org/sdk";
+import {HypercertExchangeClient, utils} from "@hypercerts-org/marketplace-sdk";
+import { ethers, verifyTypedData } from "ethers";
+import { z } from "zod";
+
+import {SupabaseDataService} from "../services/SupabaseDataService.js";
+import {isAddress} from "viem";
+
+export interface CreateOrderRequest {
+    signature: string;
+    chainId: number;
+    quoteType: number;
+    globalNonce: string;
+    subsetNonce: number;
+    orderNonce: string;
+    strategyId: number;
+    collectionType: number;
+    collection: string;
+    currency: string;
+    signer: string;
+    startTime: number;
+    endTime: number;
+    price: string;
+    itemIds: string[];
+    amounts: number[];
+    additionalParameters: string;
+}
+
+interface UpdateOrderNonceRequest {
+    address: string;
+    chainId: number;
+}
+
+@Route("v1/marketplace")
+@Tags("Marketplace")
+export class MarketplaceController extends Controller {
+
+    /**
+     * Submits a new order for validation and storage on the database.
+     *
+     */
+    @Post("/order")
+    @SuccessResponse(201, "Order created successfully")
+    @Response<ApiResponse>(422, "Unprocessable content", {
+        success: false,
+        message: "Order could not be created",
+    })
+    public async storeMetadata(@Body() requestBody: CreateOrderRequest) {
+        // Validate inputs
+        const inputSchema = z.object({
+            signature: z.string(),
+            chainId: z.number(),
+            quoteType: z.number(),
+            globalNonce: z.string(),
+            subsetNonce: z.number(),
+            orderNonce: z.string(),
+            strategyId: z.number(),
+            collectionType: z.number(),
+            collection: z.string(),
+            currency: z.string(),
+            signer: z.string(),
+            startTime: z.number(),
+            endTime: z.number(),
+            price: z.string(),
+            itemIds: z.array(z.string()),
+            amounts: z.array(z.number()),
+            additionalParameters: z.string(),
+        });
+        const parsedBody = inputSchema.safeParse(requestBody);
+        if (!parsedBody.success) {
+            console.error(parsedBody.error);
+            this.setStatus(400);
+            return {
+                success: false,
+                message: "Invalid input",
+                data: null,
+            };
+        }
+        const { signature, chainId, ...makerOrder } = parsedBody.data;
+
+        const hec = new HypercertExchangeClient(
+          chainId,
+          // @ts-expect-error Typing issue with provider
+          new ethers.JsonRpcProvider(),
+        );
+        const typedData = hec.getTypedDataDomain();
+
+        const recoveredAddress = verifyTypedData(
+          typedData,
+          utils.makerTypes,
+          makerOrder,
+          signature,
+        );
+
+        if (!(recoveredAddress.toLowerCase() === makerOrder.signer.toLowerCase())) {
+            this.setStatus(401);
+            return {
+                message: "Recovered address is not equal to signer of order",
+                success: false,
+                data: null,
+            };
+        }
+
+        const hypercertClient = new HypercertClient({
+            chain: { id: chainId },
+            indexerEnvironment: "all",
+        });
+        const tokenIds = makerOrder.itemIds.map(
+          (id) => `${chainId}-${makerOrder.collection.toLowerCase()}-${id}`,
+        );
+
+        const claimTokens = await Promise.all(
+          tokenIds.map(
+            // TODO: Query for fraction not hypercert
+            (id) => hypercertClient.indexer.hypercertById({ id })
+          ),
+        );
+
+        // Check if all fractions exist
+        if (claimTokens.some((claimToken) => !claimToken.claimToken)) {
+            this.setStatus(401);
+            return {
+                message: "Not all fractions in itemIds exist",
+                success: false,
+                data: null,
+            };
+        }
+
+        // Check if all fractions are owned by signer
+        if (
+          !claimTokens.every(
+            (claimToken) =>
+              claimToken.claimToken?.owner.toLowerCase() ===
+              recoveredAddress.toLowerCase(),
+          )
+        ) {
+            this.setStatus(401);
+            return {
+                message: "Not all fractions are owned by signer",
+                success: false,
+                data: null,
+            };
+        }
+
+        try {
+            // Add to database
+            const insertEntity = {
+                ...makerOrder,
+                chainId,
+                signature,
+            };
+            console.log("[marketplace-api] Inserting order entity", insertEntity);
+
+            const supabaseService = new SupabaseDataService();
+            const result = await supabaseService.storeOrder(insertEntity);
+
+            this.setStatus(200);
+            return {
+                message: "Added to database",
+                success: true,
+                data: result.data
+                  ? {
+                      ...result.data,
+                      itemIds: result.data.itemIds as string[],
+                      amounts: result.data.amounts as number[],
+                      status: "VALID",
+                      hash: "0x",
+                  }
+                  : null,
+            };
+        } catch (error) {
+            console.error(error);
+            if (error) {
+                this.setStatus(500);
+                return {
+                    message: "Could not add to database",
+                    success: false,
+                    data: null,
+                };
+            }
+        }
+    }
+
+    /**
+     * Submits a new order nonce for a given address and chain ID.
+     */
+    @Post("/order-nonce")
+    @SuccessResponse(201, "Order nonce updated successfully")
+    @Response<ApiResponse>(422, "Unprocessable content", {
+        success: false,
+        message: "Order nonce could not be updated",
+    })
+    public async updateOrderNonce(@Body() requestBody: UpdateOrderNonceRequest) {
+        const inputSchema = z
+          .object({
+              address: z.string({
+                  required_error: "Address is required",
+                  invalid_type_error: "Address must be a string",
+              }),
+              chainId: z.number({
+                  required_error: "Chain ID is required",
+                  invalid_type_error: "Chain ID must be a number",
+              }),
+          })
+          .refine((data) => isAddress(data.address), {
+              message: "Invalid address",
+              path: ["address"],
+          });
+        const parsedQuery = inputSchema.safeParse(requestBody);
+        if (!parsedQuery.success) {
+            this.setStatus(400);
+            return{
+                success: false,
+                message: parsedQuery.error.message,
+                data: null,
+            };
+        }
+
+        const { address, chainId } = parsedQuery.data;
+        const lowerCaseAddress = address.toLowerCase();
+
+        const supabase = new SupabaseDataService();
+        const { data: currentNonce, error: currentNonceError } = await supabase.getNonce(lowerCaseAddress, chainId);
+
+        if (currentNonceError) {
+            this.setStatus(500);
+            return {
+                success: false,
+                message: currentNonceError.message,
+                data: null,
+            };
+        }
+
+        if (!currentNonce) {
+            const { data: newNonce } = await supabase.createNonce(lowerCaseAddress, chainId);
+            this.setStatus(200);
+            return {
+                success: true,
+                message: "Success",
+                data: newNonce,
+            };
+        }
+
+        const { data: updatedNonce, error: updatedNonceError } = await supabase
+          .updateNonce(lowerCaseAddress, chainId, currentNonce.nonce_counter + 1);
+
+        if (updatedNonceError) {
+            this.setStatus(500);
+            return {
+                success: false,
+                message: updatedNonceError.message,
+                data: null,
+            };
+        }
+
+        this.setStatus(200);
+        return {
+            success: true,
+            message: "Success",
+            data: updatedNonce,
+        };
+    }
+}
